server DB URL changed

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 ﻿# Database Connection
-MONGO_URI=mongodb://127.0.0.1:27017/plantmate
+MONGO_URI=mongodb+srv://202412072:YOURPASS@quizero-cluster.e4qeixc.mongodb.net/plantmate?retryWrites=true&w=majority&appName=quizero-cluster
 
 # Server Port
 PORT=7777
