--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install backend dependencies
       run: |
         cd server
-        npm ci
+        npm ci || npm install
         
     - name: Run backend tests
       run: |
@@ -63,7 +63,7 @@ jobs:
     - name: Install frontend dependencies
       run: |
         cd plantmate
-        npm ci
+        npm ci || npm install
         
     - name: Run frontend tests
       run: |
@@ -88,9 +88,9 @@ jobs:
     - name: Install dependencies
       run: |
         cd server
-        npm ci
+        npm ci || npm install
         cd ../plantmate
-        npm ci
+        npm ci || npm install
         
     - name: Check for security vulnerabilities
       run: |
