--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,14 +19,13 @@ jobs:
     - name: Deploy Backend to Staging
       run: |
         echo "Deploying backend to staging environment"
-        # Add your staging deployment commands here
-        # Example: Deploy to Render, Heroku, or other hosting platform
+        # For Render.com deployment, you would typically use:
+        # curl -X POST https://api.render.com/v1/services/{service-id}/deploys -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}"
         
     - name: Deploy Frontend to Staging
       run: |
         echo "Deploying frontend to staging environment"
-        # Add your frontend staging deployment commands here
-        # Example: Deploy to Vercel, Netlify, or other hosting platform
+        # For Netlify/Vercel deployment, you would use their CLI or API
         
   # Deploy to Production Environment
   deploy-production:
@@ -38,14 +37,26 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18.x'
+        
     - name: Deploy Backend to Production
       run: |
         echo "Deploying backend to production environment"
-        # Add your production deployment commands here
-        # Example: Deploy to Render, Heroku, or other hosting platform
+        # Actual deployment commands would go here
+        # For Render.com:
+        # curl -X POST https://api.render.com/v1/services/{service-id}/deploys -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}"
+      env:
+        PORT: ${{ secrets.PORT }}
+        FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
+        MONGO_URI: ${{ secrets.MONGO_URI }}
         
     - name: Deploy Frontend to Production
       run: |
         echo "Deploying frontend to production environment"
-        # Add your frontend production deployment commands here
-        # Example: Deploy to Vercel, Netlify, or other hosting platform
+        # Actual deployment commands would go here
+        # For deployment platforms like Netlify or Vercel
+      env:
+        REACT_APP_API_BASE: ${{ secrets.REACT_APP_API_BASE }}
