--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
     "react": "^19.2.0",
     "react-router-dom": "^7.9.4"
   },
