--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.11",
     "react": "^19.2.0",
     "react-router-dom": "^7.9.4"
   },
